--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>COOD COODA</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -185,6 +185,205 @@
                   <img src="images/info-img-3.png" alt="image" />
                   <img src="images/info-img-4.png" alt="image" />
                 </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="family">
+          <div class="family__inner">
+            <img src="images/family-left.png" alt="image" />
+
+            <div class="family__content">
+              <h3 class="family__title">СЕМЬЯ <span>COOD COODA</span></h3>
+              <p class="family__text">
+                Семья <span>COOD COODA</span> - это образ жизни, сообщество
+                единомышленников, разделяющих наши семейные ценности, живущих
+                жизнью мечты, действующих здесь и сейчас, вместе развивающихся в
+                семейном окружении, где каждый член нашей большой семьи, из
+                любой точки мира, является опорой и поддержкой друг другу,
+                делится опытом, знаниями и возможностями, общается и встречается
+                внутри семьи в любой точке планеты, действует совместно, как
+                единое целое, реализуя идеи и проекты нашей общей семьи.
+              </p>
+              <a class="family__btn" href="#"> cood <span></span> room </a>
+              <p class="family__btn-discription">ТОЛЬКО ДЛЯ ЧЛЕНОВ СЕМЬИ</p>
+            </div>
+
+            <img src="images/family-right.png" alt="image" />
+          </div>
+        </section>
+        <section class="birth">
+          <div class="container">
+            <div class="birth__inner">
+              <div class="birth__top">
+                <h3 class="birth__top-title">
+                  Рождение <span class="cood-cooda">минт</span>
+                </h3>
+                <p class="birth__top-text">
+                  Каждый <span class="cood-cooda">COOD NFT</span> - член нашей
+                  семьи, имеет уникальную возможность прикоснуться к созданию
+                  семейной империи <span class="cood-cooda">COOD COODA</span> ,
+                  которая будет создаваться в реальном и виртуальном мирах.
+                  Будет получать привилегии, преимущества и специальные
+                  предложения, которые со временем будут только расти. Например,
+                  в приобретении выпускаемой нами, семейной ограниченной
+                  продукции, а также участия в запускаемых проектах основателями
+                  COOD COODA. Сможет совместно инвестировать, создавать активы и
+                  дополнительные источники доходов по всему миру. Посещать
+                  закрытые мероприятия, доступные только членам семьи
+                  <span class="cood-cooda">COOD COODA</span>.
+                </p>
+              </div>
+              <div class="birth__info">
+                <div class="birth__info-text">
+                  <p>
+                    Таинство <span class="cood-cooda">МИНТ COOD NFT</span> - это
+                    ваше цифровое рождение в семью COOD COODA.!
+                  </p>
+                  <p>
+                    Пришло время вашего перерождения в нашу большую семью
+                    <span class="cood-cooda">COOD COODA!</span>  
+                  </p>
+                  <p>Время менять свою жизнь к лучшему!</p>
+                  <p>
+                    Мир <span class="cood-cooda">COOD COODA</span> - экосистема
+                    COOD COODA и есть сама жизнь - лучшая жизнь, которую мы
+                    строим, объединяясь вместе!
+                  </p>
+                  <p>
+                    Наша семья только начинает расти, и мы будем рады каждому и
+                    вас!
+                  </p>
+                  <p class="info-box">
+                    <span class="cood-cooda">Примечание:</span> Дополнительно к
+                    нашей коллекции, мы нарисовали вручную 19 COOD Рrofessional
+                    NFT - это самые редкие NFT, которые не продаются. Их мы
+                    разыграем или дадим в качестве вознаграждения, членам семьи
+                    COOD COODA - держателям основной коллекции.
+                  </p>
+                </div>
+                <div class="birth__info-img">
+                  <img src="images/birth.png" alt="" />
+                </div>
+              </div>
+            </div>
+            <a class="birth__purchase" href="#">
+              Мы все одна большая семья COOD COODA! Покупка COOD NFT одинакова
+              для всех и составляет 0,099 ETH, вне зависимости от редкости.
+            </a>
+          </div>
+        </section>
+        <section class="certification">
+          <div class="container">
+            <div class="certification__inner">
+              <div class="certification__top">
+                <h3 class="certification__title">СПЕЦИФИКАЦИЯ</h3>
+                <p>
+                  <span class="cood-cooda"> Каждый COOD уникален</span> - имеет
+                  свои черты и характеристики, программно генерируется из более
+                  чем 220 возможных черт.
+                </p>
+
+                <div class="certification__box">
+                  <p>
+                    <span class="cood-cooda">Mr. и Mrs. COOD</span>- имеют белое
+                    или коричневое тело, руки в белых перчатках, показывающих
+                    жесты, эмоции и различные фоны, одежды, обувь, головные
+                    уборы, и аксессуары в виде часов, денег, сумок и так далее,
+                    где мужские аксессуары отличаются от женских.
+                  </p>
+                  <div class="certification__box-info">
+                    Вся коллекция делится на три вида COOD:
+                    <p>
+                      <span class="cood-cooda"> Mr. COOD </span> - 8 888 NFT (от
+                      1 до 8 888)
+                    </p>
+                    <p>
+                      <span class="cood-cooda">Mrs. COOD </span> - 3112 NFT (от
+                      8 889 до 12 000)
+                    </p>
+                    <p>
+                      <span class="cood-cooda">Mr. COOD GOLD</span> - 888 NFT
+                      (от 12 001 до 12 888)
+                    </p>
+                  </div>
+                </div>
+                <div class="certification__descr">
+                  <div class="certification__descr-text">
+                    <p>
+                      <span class="cood-cooda">Mr. COOD GOLD</span> - имеет
+                      золотое тело, руки в золотых перчатках, свои особенные
+                      фоны, эмоции, одежды и аксессуары, но также присутствую
+                      различные земли, которых нет у персонажей Mr. и Mrs. COOD.
+                    </p>
+                    <p>
+                      Дополнением ко всем COOD, имеют большую редкость
+                      аксессуары - эмблемы, которые находятся не на персонаже, а
+                      около него. Например мячи, монеты, воздушные змеи и так
+                      далее, что делает такой COOD NFT еще более редким.
+                    </p>
+                    <p>
+                      Все аксессуары и одежды в процентном соотношении от
+                      коллекции имеют свою редкость, определенные COOD
+                      встречаются реже других.
+                    </p>
+                    <p>
+                      <span class="cood-cooda">Коллекция COOD COODA</span>
+                      хранится на блокчейне Ethereum в виде токенов ERC - 721A,
+                      и размещена в IPFS. (Ссылка). Стоимость одного COOD
+                      составляет 0,099 ETH.
+                    </p>
+                    <p>
+                      Для того чтоб получить доступ к тайнам семьи
+                      <span class="cood-cooda">COOD COODA </span> - COOD ROOM,
+                      зайдите в свой кошелек Metamask.
+                    </p>
+                  </div>
+                  <img src="images/gif.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="collection">
+          <div class="container">
+            <h3 class="collection__title">
+              <span class="cood-cooda">КОЛЛЕКЦИЯ </span>COOD COODA
+            </h3>
+            <div class="collection__inner">
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img src="images/swipe-1.png" alt="img" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/swipe-1.png" alt="img" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/swipe-1.png" alt="img" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/swipe-1.png" alt="img" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/swipe-1.png" alt="img" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/swipe-1.png" alt="img" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/swipe-1.png" alt="img" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/swipe-1.png" alt="img" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/swipe-1.png" alt="img" />
+                  </div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
               </div>
             </div>
           </div>
