--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
             <a class="birth__purchase" href="#">
               Мы все одна большая семья COOD COODA! Покупка COOD NFT одинакова
               для всех и составляет 0,099 ETH, вне зависимости от редкости.
+              <span></span>
             </a>
           </div>
         </section>
@@ -614,11 +615,23 @@
               <span class="cood-cooda">СВЯЗАТЬСЯ </span> С НАМИ
             </div>
             <div class="connection__box">
-              <div class="connection__links">
-                <a class="connection__link" href="#"></a>
-                <a class="connection__link" href="#"></a>
-                <a class="connection__link" href="#"></a>
-                <a class="connection__link" href="#"></a>
+              <div class="social">
+                <div class="social__container">
+                  <div class="social__wrapper">
+                    <a href="#" class="social_item">
+                      <img src="images/Group 1000006355.png" alt="" />
+                    </a>
+                    <a href="#" class="social_item">
+                      <img src="images/Group 1000006356.png" alt="" />
+                    </a>
+                    <a href="#" class="social_item">
+                      <img src="images/Group 1000006360.png" alt="" />
+                    </a>
+                    <a href="#" class="social_item">
+                      <img src="images//Group 1000006364.png" alt="" />
+                    </a>
+                  </div>
+                </div>
               </div>
               <div class="connection__address">
                 <div class="connection__address-title">
