added hover effects 100% with out adaptive

--- a/index.html
+++ b/index.html
@@ -180,10 +180,18 @@
                   </p>
                 </div>
                 <div class="wellcome__info-img">
-                  <img src="images/info-img-1.png" alt="image" />
-                  <img src="images/info-img-2.png" alt="image" />
-                  <img src="images/info-img-3.png" alt="image" />
-                  <img src="images/info-img-4.png" alt="image" />
+                  <div class="wellcome__info-img-box">
+                    <img src="images/info-img-1.png" alt="image" />
+                  </div>
+                  <div class="wellcome__info-img-box">
+                    <img src="images/info-img-2.png" alt="image" />
+                  </div>
+                  <div class="wellcome__info-img-box">
+                    <img src="images/info-img-3.png" alt="image" />
+                  </div>
+                  <div class="wellcome__info-img-box">
+                    <img src="images/info-img-4.png" alt="image" />
+                  </div>
                 </div>
               </div>
             </div>
@@ -340,7 +348,9 @@
                       зайдите в свой кошелек Metamask.
                     </p>
                   </div>
-                  <img src="images/gif.png" alt="" />
+                  <div class="certification__img">
+                    <img src="images/gif.png" alt="" />
+                  </div>
                 </div>
               </div>
             </div>
