--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@
             <a href="#" class="logo">
               <img class="logo-img" src="images/logo.png" alt="logo" />
             </a>
+            <!-- <nav class="header__nav">
+              <ul class="header__nav-list">
+                <li class="header__nav-item">
+                  <a href="#" class="header__nav-link">jhghjg</a>
+                </li>
+                <li class="header__nav-item">
+                  <a href="#" class="header__nav-link">jhghjg</a>
+                </li>
+                <li class="header__nav-item">
+                  <a href="#" class="header__nav-link">jhghjg</a>
+                </li>
+                <li class="header__nav-item">
+                  <a href="#" class="header__nav-link">jhghjg</a>
+                </li>
+                <li class="header__nav-item">
+                  <a href="#" class="header__nav-link">jhghjg</a>
+                </li>
+              </ul>
+            </nav> -->
             <div class="header__menu">
               <a class="header__menu-item" href="#">КУПИТЬ COOD </a>
               <a class="header__menu-item" href="#">УТИЛИТИ</a>
