--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             <div class="wellcome__inner">
               <h2 class="wellcome__title">
                 ДОБРО ПОЖАЛОВАТЬ В мир
-                <span class="cood-cooda">COOD COODA!</span>
+                <span class="cood-cooda">COOD COODA</span>
               </h2>
 
               <div class="wellcome__info">
