--- a/index.html
+++ b/index.html
@@ -16,167 +16,13 @@
 
   <body>
     <div class="wrapper">
-      <!-- <header class="header">
-        <div class="container">
-          <div class="header__inner">
-            <a href="#" class="logo">
-              <img class="logo-img" src="images/logo.png" alt="logo" />
-            </a>
-     
-            <div class="header__menu">
-              <a class="header__menu-item" href="#">КУПИТЬ COOD </a>
-              <a class="header__menu-item" href="#">УТИЛИТИ</a>
-              <a class="header__menu-item" href="#">ДОРОЖНАЯ КАРТА</a>
-              <a class="header__menu-item" href="#">ГАЛЛЕРЕЯ</a>
-              <a class="header__menu-item" href="#">КОМАНДА</a>
-            </div>
-            <div class="header__social">
-              <a class="header__social-item" href="#">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="20"
-                  height="17"
-                  viewBox="0 0 33 27"
-                >
-                  <g filter="url(#filter0_d_1_2023)">
-                    <path
-                      d="M7.75564 1.59122C9.34447 0.847862 11.0433 0.307597 12.8194 0C13.0376 0.394354 13.2924 0.924761 13.4681 1.34672C15.3561 1.06279 17.2268 1.06279 19.0801 1.34672C19.2558 0.924761 19.5164 0.394354 19.7365 0C21.5145 0.307597 23.2153 0.849834 24.8041 1.59516C28.0088 6.43784 28.8775 11.1602 28.4431 15.8156C26.3176 17.4029 24.2578 18.3671 22.2326 18.998C21.7326 18.3099 21.2867 17.5784 20.9025 16.8074C21.6342 16.5294 22.335 16.1863 22.9971 15.788C22.8214 15.6578 22.6496 15.5218 22.4836 15.3818C18.445 17.2708 14.0569 17.2708 10.0665 15.3818C9.89852 15.5218 9.72671 15.6578 9.55296 15.788C10.2171 16.1883 10.9198 16.5313 11.6514 16.8094C11.2673 17.5784 10.8232 18.3119 10.3213 19C8.29426 18.369 6.23246 17.4048 4.10695 15.8156C3.59729 10.4188 4.97762 5.73983 7.75564 1.59122ZM20.3523 12.9526C21.5647 12.9526 22.5589 11.8208 22.5589 10.4425C22.5589 9.06424 21.5859 7.93047 20.3523 7.93047C19.1187 7.93047 18.1245 9.06227 18.1457 10.4425C18.1438 11.8208 19.1187 12.9526 20.3523 12.9526ZM12.1978 12.9526C13.4101 12.9526 14.4044 11.8208 14.4044 10.4425C14.4044 9.06424 13.4314 7.93047 12.1978 7.93047C10.9642 7.93047 9.96995 9.06227 9.99119 10.4425C9.99119 11.8208 10.9642 12.9526 12.1978 12.9526Z"
-                      shape-rendering="crispEdges"
-                    />
-                  </g>
-                  <defs>
-                    <filter
-                      id="filter0_d_1_2023"
-                      x="0.00268555"
-                      y="0"
-                      width="32.5447"
-                      height="27"
-                      filterUnits="userSpaceOnUse"
-                      color-interpolation-filters="sRGB"
-                    >
-                      <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                      <feColorMatrix
-                        in="SourceAlpha"
-                        type="matrix"
-                        values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                        result="hardAlpha"
-                      />
-                      <feOffset dy="4" />
-                      <feGaussianBlur stdDeviation="2" />
-                      <feComposite in2="hardAlpha" operator="out" />
-                      <feColorMatrix
-                        type="matrix"
-                        values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
-                      />
-                      <feBlend
-                        mode="normal"
-                        in2="BackgroundImageFix"
-                        result="effect1_dropShadow_1_2023"
-                      />
-                      <feBlend
-                        mode="normal"
-                        in="SourceGraphic"
-                        in2="effect1_dropShadow_1_2023"
-                        result="shape"
-                      />
-                    </filter>
-                  </defs>
-                </svg>
-              </a>
-
-              <a class="header__social-item" href="#">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="19"
-                  height="19"
-                  viewBox="0 0 19 19"
-                  fill="none"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="M19.0005 9.5C19.0005 14.7467 14.7472 19 9.50049 19C4.25378 19 0.000488281 14.7467 0.000488281 9.5C0.000488281 4.2533 4.25378 0 9.50049 0C14.7472 0 19.0005 4.2533 19.0005 9.5ZM9.84093 7.01332C8.91691 7.39765 7.07018 8.19311 4.30074 9.39971C3.85102 9.57855 3.61544 9.7535 3.594 9.92457C3.55775 10.2137 3.9198 10.3275 4.41282 10.4826C4.47988 10.5036 4.54937 10.5255 4.62061 10.5486C5.10566 10.7063 5.75814 10.8908 6.09734 10.8981C6.40503 10.9048 6.74844 10.7779 7.12758 10.5176C9.71516 8.77088 11.0509 7.88802 11.1347 7.86898C11.1939 7.85556 11.2759 7.83867 11.3314 7.88804C11.387 7.93742 11.3815 8.03092 11.3756 8.056C11.3398 8.2089 9.91859 9.53016 9.18313 10.2139C8.95385 10.4271 8.79121 10.5783 8.75797 10.6128C8.68349 10.6901 8.60759 10.7633 8.53464 10.8336C8.08401 11.2681 7.74608 11.5938 8.55335 12.1258C8.94129 12.3814 9.25172 12.5928 9.56141 12.8037C9.89963 13.0341 10.237 13.2638 10.6734 13.5499C10.7846 13.6228 10.8908 13.6985 10.9943 13.7723C11.3879 14.0529 11.7415 14.305 12.1784 14.2647C12.4322 14.2414 12.6944 14.0027 12.8276 13.2908C13.1423 11.6083 13.7609 7.96294 13.9039 6.46077C13.9164 6.32916 13.9007 6.16073 13.888 6.08679C13.8754 6.01285 13.8489 5.9075 13.7528 5.82952C13.639 5.73716 13.4633 5.71768 13.3847 5.71907C13.0274 5.72536 12.4792 5.91598 9.84093 7.01332Z"
-                  />
-                </svg>
-              </a>
-
-              <a class="header__social-item" href="#">
-                <svg
-                  width="16"
-                  height="13"
-                  viewBox="0 0 16 13"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M5.39902 13C11.058 13 14.1541 7.998 14.1541 3.66159C14.1541 3.52097 14.1512 3.37723 14.1453 3.23661C14.7476 2.77203 15.2674 2.19658 15.6802 1.5373C15.1193 1.80349 14.5237 1.97734 13.9139 2.0529C14.556 1.64237 15.0368 0.997433 15.2671 0.237657C14.663 0.619504 14.0024 0.888863 13.3136 1.03419C12.8495 0.508177 12.2358 0.159893 11.5675 0.0431874C10.8992 -0.0735186 10.2134 0.0478535 9.61626 0.388538C9.01911 0.729223 8.5438 1.27025 8.26383 1.92796C7.98386 2.58567 7.91482 3.32344 8.06738 4.02721C6.84423 3.96174 5.64764 3.62282 4.55516 3.03244C3.46269 2.44206 2.49873 1.61339 1.72578 0.600144C1.33293 1.3226 1.21271 2.1775 1.38957 2.99111C1.56643 3.80471 2.02709 4.51595 2.67793 4.9803C2.18932 4.96375 1.71141 4.82343 1.28369 4.57093V4.61156C1.28325 5.36972 1.52899 6.10465 1.97912 6.69142C2.42925 7.27819 3.056 7.68058 3.75283 7.83019C3.30021 7.96228 2.82516 7.98153 2.36445 7.88644C2.56108 8.53846 2.94366 9.10875 3.45878 9.51769C3.97391 9.92664 4.59588 10.1538 5.23789 10.1676C4.14794 11.0808 2.80153 11.5761 1.41553 11.5738C1.16973 11.5734 0.924175 11.5573 0.680176 11.5257C2.08821 12.4892 3.72613 13.0009 5.39902 13Z"
-                  />
-                </svg>
-              </a>
-
-              <a class="header__social-item" href="#">
-                <svg
-                  width="18"
-                  height="12"
-                  viewBox="0 0 18 12"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M17.1905 2.58928C17.1905 2.58928 17.0245 1.41294 16.5132 0.896418C15.8657 0.216607 15.1419 0.213274 14.8099 0.173285C12.4325 -9.53409e-08 8.86318 0 8.86318 0H8.85654C8.85654 0 5.28721 -9.53409e-08 2.90986 0.173285C2.57783 0.213274 1.854 0.216607 1.20654 0.896418C0.695215 1.41294 0.53252 2.58928 0.53252 2.58928C0.53252 2.58928 0.359863 3.97223 0.359863 5.35185V6.64482C0.359863 8.02444 0.529199 9.40739 0.529199 9.40739C0.529199 9.40739 0.695215 10.5837 1.20322 11.1003C1.85068 11.7801 2.70068 11.7567 3.0792 11.83C4.44053 11.96 8.85986 12 8.85986 12C8.85986 12 12.4325 11.9933 14.8099 11.8234C15.1419 11.7834 15.8657 11.7801 16.5132 11.1003C17.0245 10.5837 17.1905 9.40739 17.1905 9.40739C17.1905 9.40739 17.3599 8.02777 17.3599 6.64482V5.35185C17.3599 3.97223 17.1905 2.58928 17.1905 2.58928ZM7.10342 8.21438V3.41905L11.6954 5.82505L7.10342 8.21438Z"
-                  />
-                </svg>
-              </a>
-
-              <a class="header__social-item" href="#">
-                <svg
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M8.00518 1.44091C10.1439 1.44091 10.3972 1.45028 11.2383 1.48779C12.02 1.52217 12.4422 1.65345 12.7236 1.76284C13.0957 1.90662 13.3646 2.08166 13.6429 2.35984C13.9243 2.64114 14.0962 2.90682 14.2401 3.27877C14.3495 3.56007 14.4808 3.98515 14.5152 4.76343C14.5528 5.60735 14.5621 5.86052 14.5621 7.99531C14.5621 10.1332 14.5528 10.3864 14.5152 11.2272C14.4808 12.0086 14.3495 12.4306 14.2401 12.7119C14.0962 13.0838 13.9211 13.3526 13.6429 13.6308C13.3614 13.9121 13.0957 14.084 12.7236 14.2278C12.4422 14.3372 12.0169 14.4685 11.2383 14.5028C10.3941 14.5403 10.1408 14.5497 8.00518 14.5497C5.86643 14.5497 5.61315 14.5403 4.77203 14.5028C3.99033 14.4685 3.5682 14.3372 3.28679 14.2278C2.9147 14.084 2.64579 13.909 2.3675 13.6308C2.08609 13.3495 1.91411 13.0838 1.77028 12.7119C1.66084 12.4306 1.52951 12.0055 1.49511 11.2272C1.45759 10.3833 1.44821 10.1301 1.44821 7.99531C1.44821 5.85739 1.45759 5.60422 1.49511 4.76343C1.52951 3.98203 1.66084 3.56007 1.77028 3.27877C1.91411 2.90682 2.08921 2.63802 2.3675 2.35984C2.64891 2.07853 2.9147 1.90662 3.28679 1.76284C3.5682 1.65345 3.99345 1.52217 4.77203 1.48779C5.61315 1.45028 5.86643 1.44091 8.00518 1.44091ZM8.00518 0C5.83203 0 5.56 0.00937683 4.70637 0.0468842C3.85587 0.0843915 3.27115 0.221918 2.76461 0.418832C2.23617 0.625122 1.78904 0.89705 1.34503 1.34401C0.897889 1.78785 0.625855 2.23481 0.419484 2.75991C0.222493 3.26939 0.0849127 3.85075 0.0473908 4.70092C0.00986878 5.55734 0.000488281 5.82926 0.000488281 8.00156C0.000488281 10.1739 0.00986878 10.4458 0.0473908 11.2991C0.0849127 12.1492 0.222493 12.7337 0.419484 13.2401C0.625855 13.7683 0.897889 14.2153 1.34503 14.6591C1.78904 15.103 2.23617 15.378 2.76148 15.5812C3.27115 15.7781 3.85275 15.9156 4.70324 15.9531C5.55687 15.9906 5.8289 16 8.00205 16C10.1752 16 10.4472 15.9906 11.3009 15.9531C12.1514 15.9156 12.7361 15.7781 13.2426 15.5812C13.7679 15.378 14.2151 15.103 14.6591 14.6591C15.1031 14.2153 15.3782 13.7683 15.5815 13.2432C15.7785 12.7337 15.9161 12.1524 15.9536 11.3022C15.9911 10.4489 16.0005 10.177 16.0005 8.00469C16.0005 5.83239 15.9911 5.56046 15.9536 4.70717C15.9161 3.857 15.7785 3.27251 15.5815 2.76617C15.3845 2.23481 15.1125 1.78785 14.6653 1.34401C14.2213 0.900176 13.7742 0.625122 13.2489 0.421957C12.7392 0.225044 12.1576 0.0875171 11.3071 0.0500098C10.4504 0.00937684 10.1783 0 8.00518 0Z"
-                  />
-                  <path
-                    d="M8.00049 4C5.79212 4 4.00049 5.79164 4.00049 8C4.00049 10.2084 5.79212 12 8.00049 12C10.2089 12 12.0005 10.2084 12.0005 8C12.0005 5.79164 10.2089 4 8.00049 4ZM8.00049 10.5947C6.56779 10.5947 5.40581 9.4327 5.40581 8C5.40581 6.5673 6.56779 5.40532 8.00049 5.40532C9.43319 5.40532 10.5952 6.5673 10.5952 8C10.5952 9.4327 9.43319 10.5947 8.00049 10.5947Z"
-                  />
-                  <path
-                    d="M13.0005 3.5C13.0005 3.77687 12.7757 4 12.5005 4C12.2236 4 12.0005 3.77524 12.0005 3.5C12.0005 3.22313 12.2252 3 12.5005 3C12.7757 3 13.0005 3.22476 13.0005 3.5Z"
-                  />
-                </svg>
-              </a>
-            </div>
-          </div>
-        </div>
-      </header> -->
-
       <header class="header">
         <div class="container">
           <div class="header__inner">
             <a href="#" class="logo">
               <img class="logo-img" src="images/logo.png" alt="logo" />
             </a>
-            <!-- <nav class="header__nav">
-                <ul class="header__nav-list">
-                  <li class="header__nav-item">
-                    <a href="#" class="header__nav-link">jhghjg</a>
-                  </li>
-                  <li class="header__nav-item">
-                    <a href="#" class="header__nav-link">jhghjg</a>
-                  </li>
-                  <li class="header__nav-item">
-                    <a href="#" class="header__nav-link">jhghjg</a>
-                  </li>
-                  <li class="header__nav-item">
-                    <a href="#" class="header__nav-link">jhghjg</a>
-                  </li>
-                  <li class="header__nav-item">
-                    <a href="#" class="header__nav-link">jhghjg</a>
-                  </li>
-                </ul>
-              </nav> -->
+
             <div class="header__menu">
               <a class="header__menu-item" href="#">КУПИТЬ COOD </a>
               <a class="header__menu-item" href="#">УТИЛИТИ</a>
@@ -431,7 +277,6 @@
           </div>
         </div>
       </header>
-      <!-- ******************************************************* -->
       <div class="top-img"></div>
       <main class="main">
         <section class="wellcome">
@@ -942,17 +787,17 @@
         <div class="footer__inner">
           <div class="container">
             <div class="header__inner">
-              <a href="#" class="logo">
+              <a href="#" class="logo menu-hide">
                 <img class="logo-img" src="images/logo.png" alt="logo" />
               </a>
-              <div class="header__menu">
+              <div class="header__menu menu-hide">
                 <a class="header__menu-item" href="#">КУПИТЬ COOD </a>
                 <a class="header__menu-item" href="#">УТИЛИТИ</a>
                 <a class="header__menu-item" href="#">ДОРОЖНАЯ КАРТА</a>
                 <a class="header__menu-item" href="#">ГАЛЛЕРЕЯ</a>
                 <a class="header__menu-item" href="#">КОМАНДА</a>
               </div>
-              <div class="header__social">
+              <div class="header__social menu-hide">
                 <a class="header__social-item" href="#">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
