--- a/index.html
+++ b/index.html
@@ -325,26 +325,29 @@
           </div>
         </section>
         <section class="family">
-          <div class="family__inner">
-            <img src="images/family-left.png" alt="image" />
+          <div class="container">
+            <div class="family__inner">
+              <img src="images/family-left.png" alt="image" />
 
-            <div class="family__content">
-              <h3 class="family__title">СЕМЬЯ <span>COOD COODA</span></h3>
-              <p class="family__text">
-                Семья <span>COOD COODA</span> - это образ жизни, сообщество
-                единомышленников, разделяющих наши семейные ценности, живущих
-                жизнью мечты, действующих здесь и сейчас, вместе развивающихся в
-                семейном окружении, где каждый член нашей большой семьи, из
-                любой точки мира, является опорой и поддержкой друг другу,
-                делится опытом, знаниями и возможностями, общается и встречается
-                внутри семьи в любой точке планеты, действует совместно, как
-                единое целое, реализуя идеи и проекты нашей общей семьи.
-              </p>
-              <a class="family__btn" href="#"> cood <span></span> room </a>
-              <p class="family__btn-discription">ТОЛЬКО ДЛЯ ЧЛЕНОВ СЕМЬИ</p>
+              <div class="family__content">
+                <h3 class="family__title">СЕМЬЯ <span>COOD COODA</span></h3>
+                <p class="family__text">
+                  Семья <span>COOD COODA</span> - это образ жизни, сообщество
+                  единомышленников, разделяющих наши семейные ценности, живущих
+                  жизнью мечты, действующих здесь и сейчас, вместе развивающихся
+                  в семейном окружении, где каждый член нашей большой семьи, из
+                  любой точки мира, является опорой и поддержкой друг другу,
+                  делится опытом, знаниями и возможностями, общается и
+                  встречается внутри семьи в любой точке планеты, действует
+                  совместно, как единое целое, реализуя идеи и проекты нашей
+                  общей семьи.
+                </p>
+                <a class="family__btn" href="#"> cood <span></span> room </a>
+                <p class="family__btn-discription">ТОЛЬКО ДЛЯ ЧЛЕНОВ СЕМЬИ</p>
+              </div>
+
+              <img src="images/family-right.png" alt="image" />
             </div>
-
-            <img src="images/family-right.png" alt="image" />
           </div>
         </section>
         <section class="birth">
