--- a/tabs.html
+++ b/tabs.html
@@ -279,11 +279,9 @@
       </header>
       <main class="main">
         <section class="tab-page">
-          <div class="container">
-            <div class="top">
-              <div class="top__title">
-                <h2>МИР <span class="cood-cooda">COOD COODA </span></h2>
-              </div>
+          <div class="top">
+            <div class="top__title">
+              <h2>МИР <span class="cood-cooda">COOD COODA </span></h2>
             </div>
           </div>
         </section>
@@ -679,7 +677,7 @@
                   <div>
                     <div class="tabs__item-title">
                       <h4>ЗАПОВЕДИ COOD COODA</h4>
-                      <p class="cood-cooda bold" style="margin-bottom: 44px">
+                      <p class="cood-cooda bold">
                         Для членов семьи COOD COODA - держателей COOD NFT.
                       </p>
                     </div>
