--- a/index.html
+++ b/index.html
@@ -634,7 +634,16 @@
               </div>
               <div class="roadmap__nav-item">
                 <span class="roadmap__nav-circle"></span>
-                <div class="roadmap__nav-percent cood-cooda">80%</div>
+                <div class="roadmap__nav-percent cood-cooda">
+                  80%
+
+                  <img
+                    class="roadmap__nav-percent-img"
+                    src="images/arrowroadmabitem.png"
+                    alt="arrow"
+                  />
+                </div>
+
                 <div class="roadmap__nav-text">
                   Purchase of premises, renovation and launch of the first
                   family restaurant COOD COODA CAFE. A place for family
@@ -642,6 +651,7 @@
                   children, as well as networking, business meetings,
                   conferences. You can get acquainted with the project here
                 </div>
+                <a class="cood-cooda cafe-link" href="#"> Project COOD CAFE</a>
               </div>
               <div class="roadmap__nav-item">
                 <span class="roadmap__nav-circle"></span>
