--- a/indexru.html
+++ b/indexru.html
@@ -630,13 +630,23 @@
               </div>
               <div class="roadmap__nav-item">
                 <span class="roadmap__nav-circle"></span>
-                <div class="roadmap__nav-percent cood-cooda">80%</div>
+                <div class="roadmap__nav-percent cood-cooda">
+                  80%
+
+                  <img
+                    class="roadmap__nav-percent-img"
+                    src="images/arrowroadmabitem.png"
+                    alt="arrow"
+                  />
+                </div>
+
                 <div class="roadmap__nav-text">
                   Покупка помещения, ремонт и запуск первого семейного ресторана
                   COOD COODA CAFE. Место семейных встреч, где объединяются
                   семьи, проводят время вместе с детьми, а также нетворкинга,
                   деловых встреч, конференций. Ознакомиться с проектом можно тут
                 </div>
+                <a class="cood-cooda cafe-link" href="#"> Проект COOD CAFE</a>
               </div>
               <div class="roadmap__nav-item">
                 <span class="roadmap__nav-circle"></span>
