--- a/tabs.html
+++ b/tabs.html
@@ -19,7 +19,7 @@
       <header class="header">
         <div class="container">
           <div class="header__inner">
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
               <img class="logo-img" src="images/logo.png" alt="logo" />
             </a>
 
@@ -681,7 +681,7 @@
         <div class="footer__inner">
           <div class="container">
             <div class="header__inner">
-              <a href="#" class="logo">
+              <a href="index.html" class="logo">
                 <img class="logo-img" src="images/logo.png" alt="logo" />
               </a>
   
