--- a/terms.html
+++ b/terms.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="../css/style.min.css" />
   </head>
 
   <body>
@@ -20,15 +20,21 @@
         <div class="container">
           <div class="header__inner">
             <a href="index.html" class="logo">
-              <img class="logo-img" src="images/logo.png" alt="logo" />
+              <img class="logo-img" src="../images/logo.png" alt="logo" />
             </a>
 
             <div class="header__menu">
-              <a class="header__menu-item" href="#buy">BUY COOD</a>
-              <a class="header__menu-item" href="tabs.html">UTILITIES</a>
-              <a class="header__menu-item" href="#road">ROAD MAP</a>
-              <a class="header__menu-item" href="#gallery">GALLERY</a>
-              <a class="header__menu-item" href="#team">TEAM</a>
+              <a class="header__menu-item" href="index.html#buy"
+                >КУПИТЬ COOD
+              </a>
+              <a class="header__menu-item" href="tabs.html">УТИЛИТИ</a>
+              <a class="header__menu-item" href="index.html#road"
+                >ДОРОЖНАЯ КАРТА</a
+              >
+              <a class="header__menu-item" href="index.html#gallery"
+                >ГАЛЛЕРЕЯ</a
+              >
+              <a class="header__menu-item" href="index.html#team">КОМАНДА</a>
               <div class="header__social-mobile">
                 <a
                   class="header__social-item discord"
@@ -227,105 +233,114 @@
         <section class="terms">
           <div class="container">
             <div class="terms__conditions">
-              <div class="terms__conditions-title title">
-                TERMS AND CONDITIONS
-              </div>
+              <div class="terms__conditions-title title">TСРОКИ И УСЛОВИЯ</div>
               <div class="terms__conditions-text mr">
-                <p>
-                  COOD COODA is a collection of digital works of art (NFTs)
-                  running on the Ethereum network. This website is only an
-                  interface that allows members to share digital collectibles.
-                  Users are solely responsible for the security and management
-                  of their Ethereum private wallets, and for verifying all
-                  transactions and contracts created on this website prior to
-                  approval. In addition, since the COOD COODA smart contract
-                  operates on the Ethereum network, there is no way to cancel,
-                  undo or restore any transactions.
+                <p class="pn">
+                  COOD COODA — это коллекция цифровых произведений искусства
+                  (NFT), работающих в сети Ethereum. Этот веб-сайт является лишь
+                  интерфейсом, позволяющим участникам обмениваться цифровыми
+                  предметами коллекционирования. Пользователи несут полную
+                  ответственность за безопасность и управление своими частными
+                  кошельками Ethereum, а также за проверку всех транзакций и
+                  контрактов, созданных на этом веб-сайте, до утверждения. Кроме
+                  того, поскольку смарт-контракт COOD COODA работает в сети
+                  Ethereum, нет возможности отменить, отменить или восстановить
+                  какие-либо транзакции.
                 </p>
                 <p>
-                  This website and related services are provided "as is" and "as
-                  available" without warranty of any kind. By using this
-                  website, you accept sole responsibility for any transactions
-                  related to COOD COODA digital collectibles.
+                  Этот веб-сайт и связанные с ним услуги предоставляются «как
+                  есть» и «по мере доступности» без каких-либо гарантий.
+                  Используя этот веб-сайт, вы принимаете на себя единоличную
+                  ответственность за любые транзакции, связанные с цифровыми
+                  предметами коллекционирования COOD COODA.
                 </p>
               </div>
             </div>
             <div class="terms__owner">
-              <div class="terms__owner-title title">OWNERSHIP</div>
+              <div class="terms__owner-title title">ВЛАДЕНИЕ</div>
               <div class="terms__owner-text">
                 <div class="tems__owner-points">
                   <div class="first-point mr">
                     <p>
-                      1. You own the NFT. Each COOD is an NFT on the Ethereum
-                      blockchain. When you buy an NFT, you are in full ownership
-                      of the underlying COOD ART. Ownership of NFTs is entirely
-                      mediated by the smart contract and the Ethereum network:
-                      in no event can we confiscate, freeze or otherwise change
-                      the ownership of any COOD.
+                      1. Вы владеете NFT. Каждая COOD — это NFT в блокчейне
+                      Ethereum. Когда вы покупаете NFT, вы полностью владеете
+                      базовым COOD ART. Право собственности на NFT полностью
+                      опосредовано смарт-контрактом и сетью Ethereum: мы ни в
+                      коем случае не можем конфисковать, заморозить или иным
+                      образом изменить право собственности на любую COOD.
                     </p>
                   </div>
                   <div class="second-point mr">
                     <p>
-                      2. Personal use. Subject to your compliance with these
-                      Terms, COOD COODA LLC grants you a worldwide, royalty-free
-                      license to use, copy and display the purchased artwork,
-                      along with any extensions you choose to create or use,
-                      solely for the following purposes:
-                    </p>
-                    <p>2.1. For your personal non-commercial use;</p>
-                    <p>
-                      2.2. As part of a marketplace that permits the purchase
-                      and sale of your COOD / NFT, provided that the marketplace
-                      cryptographically verifies the rights of each COOD owner
-                      to display the Artwork;
+                      2. Персональное использование. При условии соблюдения вами
+                      настоящих Условий ООО «COOD COODA» предоставляет вам
+                      всемирную безвозмездную лицензию на использование,
+                      копирование и демонстрацию приобретенного произведения
+                      искусства вместе с любыми расширениями, которые вы решите
+                      создать или использовать, исключительно для следующих
+                      целей:
                     </p>
                     <p>
-                      2.3. As part of a trading platform that permits the
-                      purchase and sale of your COOD / NFT, provided that the
-                      trading platform cryptographically verifies the rights of
-                      each COOD owner to display the Artwork.
+                      2.1. для вашего личного некоммерческого использования;
+                    </p>
+                    <p>
+                      2.2. как часть торговой площадки, которая разрешает
+                      покупку и продажу вашего COOD / NFT, при условии, что
+                      торговая площадка криптографически проверяет права каждого
+                      владельца COOD отображать Искусство для своей СOOD, чтобы
+                      гарантировать, что только фактический владелец может
+                      отображать Искусство;
+                    </p>
+                    <p>
+                      2.3. как часть стороннего веб-сайта или приложения,
+                      которое разрешает включение, участие или участие вашей
+                      COOD.
                     </p>
                   </div>
                   <div class="third-point">
                     <p class="mr">
-                      3. Commercial use. Subject to your compliance with these
-                      Terms, COOD COODA LLC grants you an unrestricted worldwide
-                      license to use, copy and display the acquired work of art
-                      for the purpose of creating derivative works of the art
-                      (“Commercial Use”). Examples of such commercial use would
-                      be, for example, the use of the Art to produce and sell
-                      merchandise (hoodie, t-shirts, caps etc.) that display
-                      replicas of the Art.
+                      3. Коммерческое использование. При условии соблюдения вами
+                      настоящих Условий ООО «COOD COODA» предоставляет вам
+                      неограниченную международную лицензию на использование,
+                      копирование и демонстрацию приобретенного произведения
+                      искусства с целью создания производных работ на основе
+                      искусства («Коммерческое использование»). Примерами такого
+                      коммерческого использования может быть, например,
+                      использование Искусства для производства и продажи товаров
+                      (футболок и т. д.), демонстрирующих копии Искусства.
                     </p>
                     <p class="mr">
-                      For the sake of clarity, nothing in this section shall be
-                      deemed to limit you from:
+                      Для ясности ничто в этом разделе не будет считаться
+                      ограничивающим вас от:
                     </p>
                     <p>
-                      3.1. Owning or operating a market that permits the use and
-                      sale of the COOD COODA collection as a whole, provided
-                      that the market cryptographically verifies each COOD
-                      owner's rights to display art for their COOD to ensure
-                      that only the actual owner can display the art;
+                      3.1. Владения или управления рынком, который разрешает
+                      использование и продажу коллекции COOD COODA в целом, при
+                      условии, что рынок криптографически проверяет права
+                      каждого владельца COOD на демонстрацию искусства для
+                      своего COOD, чтобы гарантировать, что только фактический
+                      владелец может отображать искусство;
                     </p>
                     <p>
-                      3.2. To own or manage a third-party website or application
-                      that allows the inclusion, attracting or participation of
-                      COOD in general, provided that a third-party website or
-                      the application cryptographically checks the rights of
-                      each owner of the COOD to demonstrate art for its COOD to
-                      guarantee that only the actual owner can reflect art, and,
-                      provided that art is no longer displayed after the owner
-                      of the purchased COOD will leave the website/application;
+                      3.2. Владеть или управлять сторонним веб-сайтом или
+                      приложением, которое разрешает включение, привлечение или
+                      участие COOD в целом, при условии, что сторонний веб-сайт
+                      или приложение криптографически проверяет права каждого
+                      владельца COOD на демонстрацию Искусства для его COOD,
+                      чтобы гарантировать, что только фактический владелец может
+                      отображать Искусство, и при условии, что Искусство больше
+                      не отображается после того, как владелец купленного COOD
+                      покинет веб-сайт/приложение;
                     </p>
                     <p>
-                      3.3. Earning income from any of the above. Provided that
-                      the third party website or application cryptographically
-                      verifies the rights of each COOD COODA collection owner to
-                      display art for their COOD to ensure that only the actual
-                      owner can display the art, and provided that the art is no
-                      longer displayed after the owner purchased COOD will leave
-                      the website/app;
+                      3.3. Получение дохода от любого из вышеперечисленного. При
+                      условии, что сторонний веб-сайт или приложение
+                      криптографически проверяет права каждого владельца COOD на
+                      демонстрацию искусства для своей COOD, чтобы
+                      гарантировать, что только фактический владелец может
+                      отображать искусство, и при условии, что искусство больше
+                      не отображается после того, как владелец купленного COOD
+                      покинет веб-сайт/приложение.
                     </p>
                   </div>
                 </div>
@@ -340,15 +355,21 @@
           <div class="container">
             <div class="header__inner">
               <a href="index.html" class="logo">
-                <img class="logo-img" src="images/logo.png" alt="logo" />
+                <img class="logo-img" src="../images/logo.png" alt="logo" />
               </a>
 
               <div class="header__menu">
-                <a class="header__menu-item" href="#buy">BUY COOD</a>
-                <a class="header__menu-item" href="tabs.html">UTILITIES</a>
-                <a class="header__menu-item" href="#road">ROAD MAP</a>
-                <a class="header__menu-item" href="#gallery">GALLERY</a>
-                <a class="header__menu-item" href="#team">TEAM</a>
+                <a class="header__menu-item" href="index.html#buy"
+                  >КУПИТЬ COOD
+                </a>
+                <a class="header__menu-item" href="tabs.html">УТИЛИТИ</a>
+                <a class="header__menu-item" href="index.html#road"
+                  >ДОРОЖНАЯ КАРТА</a
+                >
+                <a class="header__menu-item" href="index.html#gallery"
+                  >ГАЛЛЕРЕЯ</a
+                >
+                <a class="header__menu-item" href="index.html#team">КОМАНДА</a>
                 <div class="header__social-mobile">
                   <a
                     class="header__social-item discord"
@@ -541,7 +562,7 @@
               </div>
             </div>
             <div class="footer__conditions">
-              <a href="#"
+              <a href="terms.html"
                 >© 2023 ООО «COOD COODA» COOD COODA terms and conditions</a
               >
             </div>
@@ -550,6 +571,6 @@
       </footer>
     </div>
 
-    <script src="js/main.min.js"></script>
+    <script src="../js/main.min.js"></script>
   </body>
 </html>
