--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../css/style.min.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
 
   <body>
@@ -20,7 +20,7 @@
         <div class="container">
           <div class="header__inner">
             <a href="index.html" class="logo">
-              <img class="logo-img" src="../images/logo.png" alt="logo" />
+              <img class="logo-img" src="images/logo.png" alt="logo" />
             </a>
 
             <div class="header__menu">
@@ -224,7 +224,7 @@
       </header>
       <!-- ************************** main ***************** -->
       <div class="bg-img">
-        <img src="../images/top-img.png" alt="" />
+        <img src="images/top-img.png" alt="" />
       </div>
       <main class="main">
         <section class="wellcome">
@@ -256,16 +256,16 @@
                 </div>
                 <div class="wellcome__info-img">
                   <div class="wellcome__info-img-box">
-                    <img src="../images/info-img-1.png" alt="image" />
+                    <img src="images/info-img-1.png" alt="image" />
                   </div>
                   <div class="wellcome__info-img-box">
-                    <img src="../images/info-img-2.png" alt="image" />
+                    <img src="images/info-img-2.png" alt="image" />
                   </div>
                   <div class="wellcome__info-img-box">
-                    <img src="../images/info-img-3.png" alt="image" />
+                    <img src="images/info-img-3.png" alt="image" />
                   </div>
                   <div class="wellcome__info-img-box">
-                    <img src="../images/info-img-4.png" alt="image" />
+                    <img src="images/info-img-4.png" alt="image" />
                   </div>
                 </div>
               </div>
@@ -275,7 +275,7 @@
         <section class="family">
           <div class="container">
             <div class="family__inner">
-              <img src="../images/family-left.png" alt="image" />
+              <img src="images/family-left.png" alt="image" />
 
               <div class="family__content">
                 <h3 class="family__title">СЕМЬЯ <span>COOD COODA</span></h3>
@@ -294,7 +294,7 @@
                 <p class="family__btn-discription">ТОЛЬКО ДЛЯ ЧЛЕНОВ СЕМЬИ</p>
               </div>
 
-              <img src="../images/family-right.png" alt="image" />
+              <img src="images/family-right.png" alt="image" />
             </div>
           </div>
         </section>
@@ -433,7 +433,7 @@
                     </p>
                   </div>
                   <div class="certification__img">
-                    <img src="../images/gif.gif" alt="" />
+                    <img src="images/gif.gif" alt="" />
                   </div>
                 </div>
               </div>
@@ -450,31 +450,31 @@
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img src="../images/swipe-1.png" alt="img" />
+                    <img src="images/swipe-1.png" alt="img" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="../images/swipe-2.png" alt="img" />
+                    <img src="images/swipe-2.png" alt="img" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="../images/swipe-3.png" alt="img" />
+                    <img src="images/swipe-3.png" alt="img" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="../images/swipe-4.png" alt="img" />
+                    <img src="images/swipe-4.png" alt="img" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="../images/swipe-5.png" alt="img" />
+                    <img src="images/swipe-5.png" alt="img" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="../images/swipe-2.png" alt="img" />
+                    <img src="images/swipe-2.png" alt="img" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="../images/swipe-3.png" alt="img" />
+                    <img src="images/swipe-3.png" alt="img" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="../images/swipe-4.png" alt="img" />
+                    <img src="images/swipe-4.png" alt="img" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="../images/swipe-5.png" alt="img" />
+                    <img src="images/swipe-5.png" alt="img" />
                   </div>
                 </div>
               </div>
@@ -581,7 +581,7 @@
 
                   <img
                     class="roadmap__nav-percent-img"
-                    src="../images/arrowroadmabitem.png"
+                    src="images/arrowroadmabitem.png"
                     alt="arrow"
                   />
                 </div>
@@ -669,7 +669,7 @@
             <div class="team__items">
               <div class="team__item">
                 <div class="team__item-img">
-                  <img src="../images/team-1.png" alt="img" />
+                  <img src="images/team-1.png" alt="img" />
                 </div>
                 <div class="team__item-info">
                   <div class="team__item-name">lucky</div>
@@ -680,7 +680,7 @@
               </div>
               <div class="team__item">
                 <div class="team__item-img">
-                  <img src="../images/team-2.png" alt="img" />
+                  <img src="images/team-2.png" alt="img" />
                 </div>
                 <div class="team__item-info">
                   <div class="team__item-name">STAR MONEY</div>
@@ -689,7 +689,7 @@
               </div>
               <div class="team__item">
                 <div class="team__item-img">
-                  <img src="../images/team-3.png" alt="img" />
+                  <img src="images/team-3.png" alt="img" />
                 </div>
                 <div class="team__item-info">
                   <div class="team__item-name">RICH MAN</div>
@@ -700,7 +700,7 @@
               </div>
               <div class="team__item">
                 <div class="team__item-img">
-                  <img src="../images/team-4.png" alt="img" />
+                  <img src="images/team-4.png" alt="img" />
                 </div>
                 <div class="team__item-info">
                   <div class="team__item-name">HONEY</div>
@@ -726,31 +726,25 @@
                       href="https://twitter.com/COOD_COODA "
                       class="social_item"
                     >
-                      <img src="../images/Group 1000006355.png" alt="twitter" />
+                      <img src="images/Group 1000006355.png" alt="twitter" />
                     </a>
                     <a
                       href="https://www.instagram.com/coodcooda/ "
                       class="social_item"
                     >
-                      <img
-                        src="../images/Group 1000006356.png"
-                        alt="instagram"
-                      />
+                      <img src="images/Group 1000006356.png" alt="instagram" />
                     </a>
                     <a
                       href="https://www.youtube.com/channel/UCwZasWrMhFUQVH3JP6IuCFg"
                       class="social_item"
                     >
-                      <img src="../images/Group 1000006360.png" alt="youtube" />
+                      <img src="images/Group 1000006360.png" alt="youtube" />
                     </a>
                     <a
                       href="https://discord.gg/6KXtFGFMJv "
                       class="social_item"
                     >
-                      <img
-                        src="../images//Group 1000006364.png"
-                        alt="discord"
-                      />
+                      <img src="images//Group 1000006364.png" alt="discord" />
                     </a>
                   </div>
                 </div>
@@ -773,7 +767,7 @@
           <div class="container">
             <div class="header__inner">
               <a href="index.html" class="logo">
-                <img class="logo-img" src="../images/logo.png" alt="logo" />
+                <img class="logo-img" src="images/logo.png" alt="logo" />
               </a>
 
               <div class="header__menu">
@@ -983,6 +977,6 @@
       </footer>
     </div>
 
-    <script src="../js/main.min.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
