--- a/index.html
+++ b/index.html
@@ -968,7 +968,7 @@
               </div>
             </div>
             <div class="footer__conditions">
-              <a href="termsru.html">
+              <a href="terms.html">
                 © 2023 ООО «COOD COODA» Положения и условия COOD COODA</a
               >
             </div>
