--- a/tabs.html
+++ b/tabs.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../css/style.min.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
 
   <body>
@@ -20,7 +20,7 @@
         <div class="container">
           <div class="header__inner">
             <a href="index.html" class="logo">
-              <img class="logo-img" src="../images/logo.png" alt="logo" />
+              <img class="logo-img" src="images/logo.png" alt="logo" />
             </a>
 
             <div class="header__menu">
@@ -761,7 +761,7 @@
           <div class="container">
             <div class="header__inner">
               <a href="index.html" class="logo">
-                <img class="logo-img" src="../images/logo.png" alt="logo" />
+                <img class="logo-img" src="images/logo.png" alt="logo" />
               </a>
 
               <div class="header__menu">
@@ -978,6 +978,6 @@
       </footer>
     </div>
 
-    <script src="../js/main.min.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
